Fixed animation flickering of serverlistings.

--- a/client/src/Styles/ServerListing.css
+++ b/client/src/Styles/ServerListing.css
@@ -99,7 +99,7 @@ h3 {
 
 @keyframes serverListingHover {
   0% {
-    transform: scale(0.9);
+    transform: scale(1);
   }
   25% {
     transform: scale(1.1);
